language/move-lang/tests/move_check/translated_ir_tests/commands/no_let_outside_if.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/no_let_outside_if.move:4:9 ───
   │
 4 │         y = 5;
   │         ^ Invalid assignment. Unbound local 'y'
   │

error: 

   ┌── tests/move_check/translated_ir_tests/commands/no_let_outside_if.move:6:9 ───
   │
 6 │         y = 0;
   │         ^ Invalid assignment. Unbound local 'y'
   │

error: 

   ┌── tests/move_check/translated_ir_tests/commands/no_let_outside_if.move:8:30 ───
   │
 8 │     0x0::Transaction::assert(y == 5, 42);
   │                              ^ Invalid local usage. Unbound local 'y'
   │

